--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
     "react-router-dom": "5.3",
+    "router": "^1.3.6",
     "uuid": "^8.3.2"
   }
 }
